nothing changed but everything

--- a/src/bootloader/stage1/Makefile
+++ b/src/bootloader/stage1/Makefile
@@ -1,24 +1,14 @@
-ASM?=nasm
-BUILD_DIR?=build
-SRC_DIR?=src
-DIR=stage1
-
-MAIN_ASM=boot.asm
-SOURCES_INCLUDES=$(shell find -name '*.inc')
 
 .PHONY: all clean
 
 all: stage1
 
-stage1: $(BUILD_DIR)/$(DIR)/stage1.bin 
+stage1: $(BUILD_DIR)/stage1.bin
 
-$(BUILD_DIR)/$(DIR)/stage1.bin: $(MAIN_ASM) $(SOURCES_INCLUDES) always
+$(BUILD_DIR)/stage1.bin: boot.asm
 	@echo "Assembling \e[33m\e[4m$<\e[0m..."
-	@$(ASM) $(MAIN_ASM) -f bin -o $(BUILD_DIR)/$(DIR)/stage1.bin
-	
-
-always:
-	@mkdir -p $(BUILD_DIR)/$(DIR)
+	@mkdir -p $(@D)
+	@$(TARGET_ASM) $< -f bin -o $@
 
 clean:
-	@rm -rf $(BUILD_DIR)/$(DIR)/*
+	@rm -f $(BUILD_DIR)/stage1.bin
