--- a/src/bootloader/stage2/Makefile
+++ b/src/bootloader/stage2/Makefile
@@ -1,38 +1,33 @@
-ASM?=nasm
-ASMFLAGS?=-f elf
-GCC?=/usr/local/i386elfgcc/bin/i386-elf-gcc
-GCCFLAGS?=-ffreestanding -m32 -g -nostdlib -I. -I../../include
-LD?=/usr/local/i386elfgcc/bin/i386-elf-ld
-LDFLAGS?=-T linker.ld -melf_i386
-BUILD_DIR?=build
-SRC_DIR?=src
-DIR=stage2
+TARGET_ASMFLAGS += -f elf
+TARGET_CFLAGS += -ffreestanding -nostdlib -I.
+TARGET_LIBS += -lgcc
+TARGET_LINKFLAGS += -T linker.ld -nostdlib
 
 SOURCES_C=$(shell find . -type f -name '*.c')
 SOURCES_ASM=$(shell find . -type f -name '*.asm')
 SOURCES_HEADERS=$(shell find . -type f -name '*.h')
 SOURCES_INCLUDES=$(shell find . -type f -name '*.inc')
-OBJECTS_C=$(patsubst %.c, $(BUILD_DIR)/$(DIR)/c/%.o, $(SOURCES_C))
-OBJECTS_ASM=$(patsubst %.asm, $(BUILD_DIR)/$(DIR)/asm/%.o, $(SOURCES_ASM))
+OBJECTS_C=$(patsubst %.c, $(BUILD_DIR)/c/%.o, $(SOURCES_C))
+OBJECTS_ASM=$(patsubst %.asm, $(BUILD_DIR)/asm/%.o, $(SOURCES_ASM))
 
 .PHONY: all clean
 
 all: stage2
 
-stage2: $(BUILD_DIR)/$(DIR)/stage2.bin
+stage2: $(BUILD_DIR)/stage2.bin
 
-$(BUILD_DIR)/$(DIR)/stage2.bin: $(OBJECTS_C) $(OBJECTS_ASM)
-	@$(LD) $(LDFLAGS) -o $(BUILD_DIR)/$(DIR)/stage2.bin $(OBJECTS_C) $(OBJECTS_ASM)
+$(BUILD_DIR)/stage2.bin: $(OBJECTS_C) $(OBJECTS_ASM)
+	@$(TARGET_LD) $(TARGET_LINKFLAGS) -Wl,-Map=$(BUILD_DIR)/stage2.map -o $@ $^ $(TARGET_LIBS)
 
-$(BUILD_DIR)/$(DIR)/c/%.o: %.c $(SOURCES_HEADERS)
+$(BUILD_DIR)/c/%.o: %.c $(SOURCES_HEADERS)
 	@echo "Compiling \e[33m\e[4m$<\e[0m..."
 	@mkdir -p $(@D)
-	@$(GCC) $(GCCFLAGS) -c $< -o $@
+	@$(TARGET_CC) $(TARGET_CFLAGS) -c -o $@ $<
 
-$(BUILD_DIR)/$(DIR)/asm/%.o: %.asm $(SOURCES_INCLUDES)
+$(BUILD_DIR)/asm/%.o: %.asm $(SOURCES_INCLUDES)
 	@echo "Assembling \e[33m\e[4m$<\e[0m..."
 	@mkdir -p $(@D)
-	@$(ASM) $(ASMFLAGS) -o $@ $<
+	@$(TARGET_ASM) $(TARGET_ASMFLAGS) -o $@ $<
 
 clean:
-	@rm -rf $(BUILD_DIR)/$(DIR)/*
+	@rm -rf $(BUILD_DIR)/*
